clusters/pk3s/spec-frontend/ingressroute-https.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spec-frontend-https
  namespace: spec-frontend
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`spec.watchtoken.org`)
      services:
        - name: spec-frontend
          port: 80
  tls: {}
