clusters/pk3s/spec-frontend/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spec-frontend
  namespace: spec-frontend
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`spec.watchtoken.org`)
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: spec-frontend
          port: 80
    - kind: Rule
      match: Host(`spec-frontend.local`)
      services:
        - name: spec-frontend
          port: 80
